fixed email, and vision statement for iphone 5

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -50,7 +50,7 @@
                     <img src="img/dawa/dawa.png" alt="" width="150" height="50" />
 
                 </a>
-                <div id="vision_statement"><h7><i>To Empower Patients with Healthier Lives</i></h7></div>
+                <div id="vision_statement"><h7><i id="vision">To Empower Patients with Healthier Lives</i></h7></div>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -76,14 +76,14 @@
 					<div class="wow fadeInDown" data-wow-offset="0" data-wow-delay="0.1s">
 					</div>
 					<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.1s">
-  				<!-- <h1 class="h-light">Innovating healthcare services in developing countries
-</h1> -->
+          <h1 class="h-light">dawaCare is a nonprofit organization that aims to improve patient satisfaction by:
+</h1>
 					</div>
 						<div class="well well-trans">
 						<div class="wow fadeInRight" data-wow-delay="0.1s">
 
 						<ul class="lead-list">
-              <li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Engage Patients For Appointments and Medication</strong><br />Contacting patients using phone calls and text messages to engage patients about appointments and medication</span></li>
+              <li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Engage Patients For Reminders</strong><br />Contacting patients using phone calls and text messages to engage patients about appointments and medication</span></li>
 							<li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Measure Health Outcomes</strong><br />Collecting data to measure patient satisfaction and improve healthcare facility performance</span></li>
               <li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Low-Cost Solution for Health Facilities</strong><br />Providing a Patient Care Coordinator at a healthcare facility to collect patient information with consent and engaging patients</span></li>
 						</ul>
@@ -105,10 +105,12 @@
     <div class="container">
 
         <div class="wow fadeInUp" data-wow-delay="0.2s">
-          <div id="mission_statement"><h6>dawaCare's mission is innovating patient engagement services by enhancing follow-up care in developing countries.</h6></div>
-        <h6>Improving patient engagement will solve many issues with adherence to treatment, which is especially important in developing countries when access is limited.</h6>
-        <h6>This will ensure that patients with life-threatening conditions such as malaria, TB, and HIV, have the necessary treatment and support.</h6>
-        </div>
+          <div id="mission_statement"><h2>Our mission is innovating patient engagement services by enhancing follow-up care in developing countries</h2></div>
+        <!-- <h6>Improving patient engagement will solve many issues with adherence to treatment, which is especially important in developing countries when access is limited.</h6>
+        <h6>This will ensure that patients with life-threatening conditions such as malaria, TB, and HIV, have the necessary treatment and support.</h6> -->
+        <!-- <h6>From the start of our pilot project at a hospital in Buea Cameroon, we have seen significant improvements in follow-up vists, medication adherence and overall patient satisfaction at this facility.</h6> -->
+         <h6></h6>
+       </div>
 
 
   	<!-- Section: services -->
@@ -168,17 +170,7 @@
                   </div>
   				</div>
 
-  				<div class="wow fadeInRight" data-wow-delay="0.2s">
-  				<div class="service-box">
-  					<div class="service-icon">
-  						<span class="fa fa-filter fa-3x"></span>
-  					</div>
-  					<div class="service-desc">
-  						<h5>Data Collection to Measure Impact</h5>
-  					</div>
-                  </div>
-  				</div>
-  				<div class="wow fadeInRight" data-wow-delay="0.3s">
+          <div class="wow fadeInRight" data-wow-delay="0.3s">
   				<div class="service-box">
   					<div class="service-icon">
   						<span class="fa fa-user-md fa-3x"></span>
@@ -189,6 +181,18 @@
                   </div>
   				</div>
 
+  				<div class="wow fadeInRight" data-wow-delay="0.2s">
+  				<div class="service-box">
+  					<div class="service-icon">
+  						<span class="fa fa-filter fa-3x"></span>
+  					</div>
+  					<div class="service-desc">
+  						<h5>Data Collection to Measure Impact</h5>
+  					</div>
+                  </div>
+  				</div>
+
+
               </div>
 
           </div>
@@ -197,33 +201,7 @@
   	<!-- /Section: services -->
 
 
-    <!-- <section id="callaction" class="home-section paddingtop-40">
-               <div class="container">
-    				<div class="row">
-    					<div class="col-md-12">
-    						<div class="callaction bg-gray">
-    							<div class="row">
-    								<div class="col-md-8">
-    									<div class="wow fadeInUp" data-wow-delay="0.1s">
-    									<div class="cta-text">
-    									<h3>We would like to hear from you umm, reach out to us by clicking contact us.</h3>
-    									<p>Lorem ipsum dolor sit amet consectetur adipiscing elit uisque interdum ante eget faucibus. </p>
-    									</div>
-    									</div>
-    								</div>
-    								<div class="col-md-4">
-    									<div class="wow lightSpeedIn" data-wow-delay="0.1s">
-    										<div class="cta-btn">
-    										<a href="#" class="btn btn-skin btn-lg">Call To ACTION</a>
-    										</div>
-    									</div>
-    								</div>
-    							</div>
-    						</div>
-    					</div>
-    				</div>
-                </div>
-    	</section> -->
+  <br />
 
 
 	<!-- Section: boxes -->
@@ -286,114 +264,6 @@
 
 	</section>
 	<!-- /Section: boxes -->
-
-
-  <!-- Section: testimonial -->
-      <section id="testimonial" class="home-section paddingbot-60 parallax" data-stellar-background-ratio="0.5">
-
-  <div class="carousel-reviews broun-block">
-      <div class="container">
-          <div class="row">
-              <div id="carousel-reviews" class="carousel slide" data-ride="carousel">
-
-                  <div class="carousel-inner">
-                      <div class="item active">
-                  	    <div class="col-md-4 col-sm-6">
-          				    <div class="block-text rel zmin">
-  						        <a title="" href="#">Emergency Contraception</a>
-  							    <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star"></span><span data-value="3" class="glyphicon glyphicon-star"></span><span data-value="4" class="glyphicon glyphicon-star-empty"></span><span data-value="5" class="glyphicon glyphicon-star-empty"></span>  </span></div>
-  						        <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud ...</p>
-  							    <ins class="ab zmin sprite sprite-i-triangle block"></ins>
-  					        </div>
-  							<div class="person-text rel text-light">
-  								<img src="img/testimonials/1.jpg" alt="" class="person img-circle" />
-  								<a title="" href="#">Anna</a>
-  								<span>Chicago, Illinois</span>
-  							</div>
-  						</div>
-              			<div class="col-md-4 col-sm-6 hidden-xs">
-  						    <div class="block-text rel zmin">
-  						        <a title="" href="#">Orthopedic Surgery</a>
-  							    <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star-empty"></span><span data-value="3" class="glyphicon glyphicon-star-empty"></span><span data-value="4" class="glyphicon glyphicon-star-empty"></span><span data-value="5" class="glyphicon glyphicon-star-empty"></span>  </span></div>
-  						        <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud ...</p>
-  							    <ins class="ab zmin sprite sprite-i-triangle block"></ins>
-  				            </div>
-  							<div class="person-text rel text-light">
-  				                <img src="img/testimonials/2.jpg" alt="" class="person img-circle" />
-  								<a title="" href="#">Matthew G</a>
-  								<span>San Antonio, Texas</span>
-  							</div>
-  						</div>
-  						<div class="col-md-4 col-sm-6 hidden-sm hidden-xs">
-  							<div class="block-text rel zmin">
-  								<a title="" href="#">Medical consultation</a>
-  								<div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star"></span><span data-value="3" class="glyphicon glyphicon-star"></span><span data-value="4" class="glyphicon glyphicon-star"></span><span data-value="5" class="glyphicon glyphicon-star"></span>  </span></div>
-  						        <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud ...</p>
-  							    <ins class="ab zmin sprite sprite-i-triangle block"></ins>
-  							</div>
-  							<div class="person-text rel text-light">
-  								<img src="img/testimonials/3.jpg" alt="" class="person img-circle" />
-  								<a title="" href="#">Scarlet Smith</a>
-  								<span>Dallas, Texas</span>
-  							</div>
-  						</div>
-                      </div>
-                      <div class="item">
-                          <div class="col-md-4 col-sm-6">
-          				    <div class="block-text rel zmin">
-  						        <a title="" href="#">Birth control pills</a>
-  							    <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star"></span><span data-value="3" class="glyphicon glyphicon-star"></span><span data-value="4" class="glyphicon glyphicon-star-empty"></span><span data-value="5" class="glyphicon glyphicon-star-empty"></span>  </span></div>
-  						        <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud ...</p>
-  							    <ins class="ab zmin sprite sprite-i-triangle block"></ins>
-  					        </div>
-  							<div class="person-text rel text-light">
-  								<img src="img/testimonials/4.jpg" alt="" class="person img-circle" />
-  								<a title="" href="#">Lucas Thompson</a>
-  								<span>Austin, Texas</span>
-  							</div>
-  						</div>
-              			<div class="col-md-4 col-sm-6 hidden-xs">
-  						    <div class="block-text rel zmin">
-  						        <a title="" href="#">Radiology</a>
-  							    <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star-empty"></span><span data-value="3" class="glyphicon glyphicon-star-empty"></span><span data-value="4" class="glyphicon glyphicon-star-empty"></span><span data-value="5" class="glyphicon glyphicon-star-empty"></span>  </span></div>
-  						        <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud ...</p>
-  							    <ins class="ab zmin sprite sprite-i-triangle block"></ins>
-  				            </div>
-  							<div class="person-text rel text-light">
-  								<img src="img/testimonials/5.jpg" alt="" class="person img-circle" />
-  						        <a title="" href="#">Ella Mentree</a>
-  								<span>Fort Worth, Texas</span>
-  							</div>
-  						</div>
-  						<div class="col-md-4 col-sm-6 hidden-sm hidden-xs">
-  							<div class="block-text rel zmin">
-  								<a title="" href="#">Cervical Lesions</a>
-  								<div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star"></span><span data-value="3" class="glyphicon glyphicon-star"></span><span data-value="4" class="glyphicon glyphicon-star"></span><span data-value="5" class="glyphicon glyphicon-star"></span>  </span></div>
-  						        <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud ...</p>
-  							    <ins class="ab zmin sprite sprite-i-triangle block"></ins>
-  							</div>
-  							<div class="person-text rel text-light">
-  								<img src="img/testimonials/6.jpg" alt="" class="person img-circle" />
-  								<a title="" href="#">Suzanne Adam</a>
-  								<span>Detroit, Michigan</span>
-  							</div>
-  						</div>
-                      </div>
-
-
-                  </div>
-
-                  <a class="left carousel-control" href="#carousel-reviews" role="button" data-slide="prev">
-                      <span class="glyphicon glyphicon-chevron-left"></span>
-                  </a>
-                  <a class="right carousel-control" href="#carousel-reviews" role="button" data-slide="next">
-                      <span class="glyphicon glyphicon-chevron-right"></span>
-                  </a>
-              </div>
-          </div>
-      </div>
-  </div>
-  	</section>
 
 
 
@@ -539,7 +409,7 @@
 								<span class="fa-stack fa-lg">
 									<i class="fa fa-circle fa-stack-2x"></i>
 									<i class="fa fa-envelope-o fa-stack-1x fa-inverse"></i>
-								</span> <p class="email">dawaCare@zahncenternyc.com</p>
+								</span> <h8 class="email">dawaCare@zahncenternyc.com</h8>
 							</li>
 
 						</ul>
