--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,9 @@
   margin-top: 64px;
 }
 
-
+#vision {
+  margin-top: 100px;@
+}
 body {
     width: 100%;
     height: 100%;
@@ -53,6 +55,16 @@ layout
 	background-color: #fff;
 
 }
+
+@media (max-width: 568px) {
+  #wrapper.boxed {
+    width: 100%;
+  }
+  #vision {
+    font-size: 0.6em;
+  }
+}
+
 @media (max-width: 767px) {
 	#wrapper.boxed {
 		width: 100%;
@@ -96,8 +108,9 @@ h5 {
 h6 {
 	font-size: 20px;
 }
-#mission_statement h6{
+#mission_statement{
   font-weight: bold;
+  text-align: center;
 }
 
 h1,
