--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -229,7 +229,7 @@
               <i class="fa fa-user-md fa-3x circled bg-skin"></i>
               <h4 class="h-bold">Patient Care Coordinator</h4>
               <p>
-                Supported over 150 patients, resolved over 50 medication incidents, increased follow-up appointments by 30%
+                Supported over 1400 patients, resolved over 400 medication incidents, increased follow-up appointments by 45%
               </p>
             </div>
           </div>
@@ -275,7 +275,7 @@
 					<div class="wow fadeInDown" data-wow-delay="0.1s">
 					<div class="section-heading text-center">
 					<h2 class="h-bold">Our Team</h2>
-					<p>We are a team of passionate entrepreneurs solving problems in healthcare delivery in developing countries.  </p>
+					<p>We are passionate about improving patient care in developing countries.  </p>
 					</div>
 					</div>
 					<div class="divider-short"></div>
@@ -345,24 +345,7 @@
                         <div class="cbp-l-grid-team-position">Patient Success</div>
                     </li>
 
-                    <li class="cbp-item">
-                     <!-- <a href="doctors/member2.html" class="cbp-caption cbp-singlePage"> -->
-                       <div class="cbp-caption cbp-singlePage">
-
-                            <div class="cbp-caption-defaultWrap">
-                                <img src="img/dawa/jesse.png" alt="" width="100%">
-                            </div>
-                            <!-- <div class="cbp-caption-activeWrap">
-                                <div class="cbp-l-caption-alignCenter">
-                                    <div class="cbp-l-caption-body">
-                                        <div class="cbp-l-caption-text">VIEW PROFILE</div>
-                                    </div>
-                                </div>
-                            </div> -->
-                        </div>
-                        <p class="cbp-singlePage cbp-l-grid-team-name">Jesse Naldo</p>
-                        <div class="cbp-l-grid-team-position">Software Dev</div>
-                    </li>
+                  
 
 
                 </ul>
