--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -414,7 +414,7 @@
 						<ul class="company-social">
 								<li class="social-facebook"><a href="https://facebook.com/dawacare2017"> <i class="fa fa-facebook"></i>&nbsp; Facebook</a></li>
 								<li class="social-twitter"><a href="https://twitter.com/dawacare"><i class="fa fa-twitter"></i>&nbsp; Twitter</a></li>
-								<li class="social-google"><a href="mailto:dawaCare@zahncenter.com?Subject=Hello"><i class="fa fa-envelope"></i>&nbsp; Email</a></li>
+								<li class="social-google"><a href="mailto:team@dawa.care?Subject=Hello"><i class="fa fa-envelope"></i>&nbsp; Email</a></li>
 						</ul>
 					</div>
 					</div>
