--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -392,7 +392,7 @@
 								<span class="fa-stack fa-lg">
 									<i class="fa fa-circle fa-stack-2x"></i>
 									<i class="fa fa-envelope-o fa-stack-1x fa-inverse"></i>
-								</span> <h8 class="email">dawaCare@zahncenternyc.com</h8>
+								</span> <h8 class="email">team@dawa.care</h8>
 							</li>
 
 						</ul>
